<resources>
    <string name="app_name">SampleKotlinApp</string>
    <string name="previous_page">Previous</string>
    <string name="next_page">Next</string>
    <string name="filter_color">Color</string>
    <string name="filter_designer">Designer</string>
    <string name="filter_category">Category</string>
    <string name="filter_prices">Prices</string>
    <string name="photo">Photo</string>
    <string name="reset">Reset</string>
    <string name="visual_search">Visual Search</string>
</resources>
