<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_search"
            tools:itemCount="3"
            app:layout_constraintVertical_bias="0.00999999"/>

    <HorizontalScrollView
            android:id="@+id/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

            <Button
                    android:id="@+id/previous_page"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previous_page"
                    android:textSize="12sp"
                    android:layout_marginEnd="4dp"/>

            <Button
                    android:id="@+id/next_page"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_page"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

            <Button
                    android:id="@+id/filter_color"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_color"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

            <Button
                    android:id="@+id/filter_designer"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_designer"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

            <Button
                    android:id="@+id/filter_category"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_category"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

            <Button
                    android:id="@+id/filter_prices"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_prices"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

            <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"/>
        </LinearLayout>

    </HorizontalScrollView>


    <ProgressBar
            android:id="@+id/loader"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>